--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
                                 </div>
                                 <input type="checkbox" id="sub-introduce" class="display-n">
                                 <ul>
-                                    <li><a href="#">個人介紹1</a></li>
-                                    <li><a href="#">個人介紹2</a></li>
-                                    <li><a href="#">個人介紹3</a></li>
+                                    <li><a href="profile.html" target="_blank">個人介紹</a></li>
                                 </ul>
                             </li>
 
@@ -132,13 +130,13 @@
                         <a class="lightbg" href="https://www.tiktok.com/" target="_blank" style="--color:#fff;">
                             <i class="bi bi-tiktok"></i>
                         </a>
-                        <a class="lightbg" href="#" style="--color:#ee82ee;">
+                        <a class="lightbg" href="https://www.instagram.com/" style="--color:#ee82ee;" target="_blank">
                             <i class="bi bi-instagram"></i>
                         </a>
                         <a class="lightbg" href="https://www.youtube.com/" style="--color:#ff4500;" target="_blank">
                             <i class="bi bi-youtube"></i>
                         </a>
-                        <a class="lightbg" href="#" style="--color:#4267b2;">
+                        <a class="lightbg" href="https://www.facebook.com/" style="--color:#4267b2;" target="_blank">
                             <i class="bi bi-facebook"></i>
                         </a>
                     </div>
@@ -149,9 +147,9 @@
     <main>
         <div id="main_img">
             <div class="flexbox img">
-                <img src="images/mainimg1.png" alt="iu1">
-                <img src="images/mainimg3.png" alt="iu2">
-                <img src="images/mainimg2.png" alt="iu3">
+                <img src="images/mainimg1.png" alt="img1">
+                <img src="images/mainimg3.png" alt="img3">
+                <img src="images/mainimg2.png" alt="img2">
             </div>
 
             <div id="aboutme" class="marginTop">
