--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link href="images/i.png" rel="shortcut icon" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="mainstyle.css">
+    <script src="jquery-3.7.1.min.js"></script>
+    <script src="index.js"></script>
 </head>
 <title>my web</title>
 
@@ -255,7 +257,7 @@
                         <h2>名言佳句</h2>
                     </section>
                     <section class="flexbox flexJustifyContent-sa f-direction-cc f-direction-pad-c">
-                        <div>
+                        <div class="blogEf1 blogEfph1">
                             <article>
                                 <span>
                                     <h3>Spend your life in your own way.</h3>
@@ -267,7 +269,7 @@
                                 </div>
                             </article>
                         </div>
-                        <div>
+                        <div class="blogEf2 blogEfph2">
                             <article>
                                 <span>
                                     <h3>The first step is as good as half over.</h3>
@@ -279,7 +281,7 @@
                                 </div>
                             </article>
                         </div>
-                        <div>
+                        <div class="blogEf3 blogEfph3">
                             <article>
                                 <span>
                                     <h3>Light tomorrow with today.</h3>
