--- a/index.html
+++ b/index.html
@@ -147,12 +147,16 @@
         </header>
     </div>
     <main>
-        <div id="main_img">
+        <div>
             <div class="flexbox img">
-                <img src="images/mainimg1.png" alt="img1">
-                <img src="images/mainimg3.png" alt="img3">
-                <img src="images/mainimg2.png" alt="img2">
+                <img src="images/mainbg1.png" alt="img1">
+                <img src="images/mainbg2.png" alt="img2">
+                <img src="images/mainbg3.png" alt="img3">
+                <div class="text">
+                    <p>Welcome to My web</p>
+                </div>
             </div>
+
 
             <div id="aboutme" class="marginTop">
                 <div class="flexbox f-direction-rr flexJustifyContent-c">
