--- a/index.html
+++ b/index.html
@@ -218,43 +218,35 @@
                     <span>
                         <h2>網頁語言介紹</h2>
                     </span>
-                    <section>
-                        <div>
+                    <section class="skill-item">
+                        <img src="images/skillbg.png" alt="skillbg1">
+                        <div class="sktext">
                             <h3>Html</h3>
-                        </div>
-                        <div>
-                            <div>
-                                <p>
-                                    超文本標記語言,英語:HyperTextMarkupLanguage,簡稱HTML是一種用於建立網頁的標準標記語言。HTML是一種基礎技術
-                                    ,常與CSS、JavaScript一起被眾多網站用於設計網頁、網頁應用程式以及行動應用程式的使用者介面。網頁瀏覽器可以讀取HTML檔案,並將其彩現成視覺化網頁。HTML描述了一個網站的結構語意隨著線索的呈現,使之成為一種標記語言而非程式語言。
-                                </p>
-                            </div>
-                        </div>
-                    </section>
-                    <section>
-                        <div>
-                            <h3>Css</h3>
-                        </div>
-                        <div>
-                            <p>
-                                階層式樣式表,英語:CascadingStyleSheets,縮寫:CSS;又稱串樣式列表、級聯樣式表、串接樣式表、階層式樣式表是一種用來為結構化文件如HTML文件或XML應用添加樣式字型、間距和顏色等的電腦語言。
+                            <p>超文本標記語言,英語:HyperTextMarkupLanguage,簡稱HTML是一種用於建立網頁的標準標記語言。網頁瀏覽器可以讀取HTML檔案,並將其彩現成視覺化網頁。
                             </p>
                         </div>
                     </section>
 
-                    <section>
-                        <div>
-                            <h3>Javascript</h3>
+                    <section class="skill-item">
+                        <img src="images/skillbg.png" alt="skillbg2">
+                        <div class="sktext">
+                            <h3>Css</h3>
+                            <p>階層式樣式表,英語:CascadingStyleSheets,縮寫:CSS;又稱串樣式列表、級聯樣式表、串接樣式表、階層式樣式表是一種用來為結構化文件如HTML文件或XML應用添加樣式字型、間距和顏色等的電腦語言。
+                            </p>
                         </div>
-                        <div>
-                            <p>
-                                超文本標記語言,英語:HyperTextMarkupJavaScript通常縮寫為JS,是一門基於原型和頭等函數的多範式進階直譯程式語言,它支援物件導向程式設計、指令式編程和函數式程式設計。它提供方法來操控文字、陣列、日期以及正規表示式等。
-                                不支援I/O,比如網路、儲存和圖形等,但這些都可以由它的宿主環境提供支援,目前它被世界上的絕大多數網站所使用,也被世界主流瀏覽器Chrome、IE、Firefox、Safari和Opera所支援。
+                    </section>
+
+                    <section class="skill-item">
+                        <img src="images/skillbg.png" alt="skillbg3">
+                        <div class="sktext">
+                            <h3>Javascript</h3>
+                            <p>超文本標記語言,英語:HyperTextMarkupJavaScript通常縮寫為JS,是一門基於原型和頭等函數的多範式進階直譯程式語言,它支援物件導向程式設計、指令式編程和函數式程式設計。它提供方法來操控文字、陣列、日期以及正規表示式等。
                             </p>
                         </div>
                     </section>
                 </div>
             </div>
+
             <div id="blog" class="marginTop">
                 <div>
                     <section class="area-title">
@@ -314,6 +306,7 @@
                         <p>Css</p>
                         <p>Javascript</p>
                         <p>Jquery</p>
+                        <p>RWD</p>
                     </span>
                 </div>
                 <div>
