--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
             <div class="flexbox  flexWrap-w">
                 <div class="flexbox pc-col3 pad-col2  flexWrap-w logo">
                     <div class="flexbox pc-col4  flexWrap-w">
-                        <label for="navbtn"><i class="bi bi-list"></i></label><span><img
-                                src="images/mianweb.png"></span>
+                        <label for="navbtn"><i class="bi bi-list"></i></label><span><img src="images/myWeb.png"></span>
                     </div>
                     <div class="pc-col8 display-n">
                         <h3>個人專用</h3>
