--- a/index.html
+++ b/index.html
@@ -162,15 +162,14 @@
                     <section>
                         <img src="images/j.jpg" width="531px">
                     </section>
-                    <section>
+                    <section class="aboutme-item">
                         <div>
                             <h2><i class="bi bi-person-fill"></i>關於我</h2>
                             <p>我畢業於修平科技大學資訊管理系，畢業之後都在學習程式碼，現在主要是網站開發為主</p>
                         </div>
                         <div>
-                            <p>我叫廖祐鈞，我對程式設計有很大的熱情，畢業之後都在專研程式，我相信程式可以做到很多平常覺得做不到的事，寫程式的人
-                                就好像創造新世界，必須一步一步來，才能打造出完整的世界，目前的我主要是開發網站為主，此網站也是我開發的
-                                ，此網站純屬個人專用，方便而已。
+                            <p>我叫廖祐鈞，我對程式設計有很大的熱情，畢業之後都在專研程式，我相信程式可以做到很多平常覺得做不到的事，目前的我主要是開發網站為主，此網站也是我開發的
+                                ，此網站有RWD，有PC、平板以及手機版本。
                             </p>
                         </div>
                     </section>
