--- a/profile.html
+++ b/profile.html
@@ -78,22 +78,20 @@
             </figure>
             <figure>
                 <div>
-                    <p>我是修平科技大學資訊管理系的畢業生。對於程式的運作方式和應用一直抱持濃厚的興趣，因此決定追尋成為一名軟體
-                        工程師的夢想。然而，在校學習所得並不能滿足我對程式的好奇心，因此我參加了聯成電腦的培訓課程，進一步了解
-                        程式的運作方式和應用，讓我對程式更加熱愛。我深信程式可以解決許多問題，並且帶來極大的便利性，這讓我堅定了
-                        成為一名工程師的決心。</p>
+                    <p>我是修平科技大學資訊管理系的畢業生。對於程式的運作方式和應用一直抱持濃厚的興趣，因此決定追尋成為一名工程師的夢想。
+                        然而，在校學習所得並不能滿足我對程式的好奇心，因此我參加了聯成電腦的培訓課程，進一步了解程式的運作方式和應用，讓我對程式更加熱愛。我深信程式可以解決許多問題，並且帶來極大的便利性，這讓我堅定了成為一名工程師的決心。
+                    </p>
                 </div>
                 <div>
                     <p>
-                        我性格冷靜、溫和，不喜歡與人爭吵。我對跳舞和音樂也有濃厚的興趣，曾經參加社團並擔任幹部。除了享受跳舞的樂
-                        趣外，我也很喜歡和大家一起聚在一起的氛圍，透過音樂來尋找藝術和培養自己的美感與氣質。
+                        我性格冷靜、溫和，不喜歡與人爭吵。我對跳舞和音樂也有濃厚的興趣，曾經參加社團並擔任幹部。除了享受跳舞的樂趣外，我也很喜歡和大家一起聚在一起的氛圍以及團隊合作的感覺，透過音樂來尋找藝術和培養自己的美感與氣質，以提升網頁設計的素質。
                     </p>
                 </div>
                 <div>
                     <p>
                         透過跳舞，我學到了堅持努力不懈的精神，相信只要有恆心就一定能夠達成目標。在工作上，我也會持續努力並且達成
                         自己所設定的目標。我不害怕失敗，相反地，我會透過失敗中學習成長，克服難關並且越挫越勇。我相信我的性格和對
-                        於學習的熱情可以讓我成為一名優秀的軟體工程師。
+                        於學習的熱情可以讓我成為一名優秀的工程師。
                     </p>
                 </div>
             </figure>
